<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="profileVM" type="com.application.app.modules.profile.data.viewmodel.ProfileVM"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintProfile"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_1">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintGroup222"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <ImageView android:id="@+id/imageProfilePicture"
                android:layout_height="@dimen/_140pxh"
                android:layout_marginEnd="@dimen/_120pxh"
                android:layout_marginStart="@dimen/_77pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="@dimen/_120pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_profilepicture_5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.24"
                app:layout_constraintStart_toEndOf="@+id/imageExitbuttonin" app:layout_constraintTop_toTopOf="@+id/imageExitbuttonin"/>
            <ImageView android:clickable="true"
                android:id="@+id/imageExitbuttonin"
                android:layout_height="@dimen/_36pxh"
                android:layout_marginBottom="@dimen/_122pxv"
                android:layout_width="@dimen/_43pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_exitbuttonin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageProfilePicture"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView android:ellipsize="end" android:gravity="end"
            android:id="@+id/txtEditPhoto"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_150pxh"
            android:layout_marginStart="@dimen/_150pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="0dp" android:singleLine="true"
            android:text="@{profileVM.profileModel.txtEditPhoto}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintGroup222"
            style="@style/txtRobotoregular13" tools:text="@string/lbl_edit_photo"/>
        <TextView android:ellipsize="end" android:gravity="end"
            android:id="@+id/txtEditUsername"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_136pxh"
            android:layout_marginStart="@dimen/_136pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_width="0dp" android:singleLine="true"
            android:text="@{profileVM.profileModel.txtEditUsername}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEditPhoto"
            style="@style/txtRobotoregular13" tools:text="@string/lbl_edit_username"/>
        <TextView android:ellipsize="end" android:gravity="end"
            android:id="@+id/txtEditAge"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_154pxh"
            android:layout_marginStart="@dimen/_154pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="0dp" android:singleLine="true"
            android:text="@{profileVM.profileModel.txtEditAge}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEditUsername"
            style="@style/txtRobotoregular13" tools:text="@string/lbl_edit_age"/>
        <TextView android:gravity="center"
            android:id="@+id/txtWeeklyListenD"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_415pxv"
            android:layout_marginEnd="@dimen/_79pxh"
            android:layout_marginStart="@dimen/_78pxh"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="0dp"
            android:text="@{profileVM.profileModel.txtWeeklyListenD}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtChangePasswor"
            style="@style/txtRobotoregular13" tools:text="@string/msg_weekly_listen_d"/>
        <TextView android:ellipsize="end" android:gravity="end"
            android:id="@+id/txtChangePasswor"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_118pxh"
            android:layout_marginStart="@dimen/_117pxh"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="0dp" android:singleLine="true"
            android:text="@{profileVM.profileModel.txtChangePasswor}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEditAge"
            style="@style/txtRobotoregular15" tools:text="@string/msg_change_passwor"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
