<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="profileScreenVM" type="com.application.app.modules.profilescreen.data.viewmodel.ProfileScreenVM"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintProfileScreen"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_1">
        <ImageView android:id="@+id/imageProfilePicture"
            android:layout_height="@dimen/_140pxh"
            android:layout_marginEnd="@dimen/_6pxh"
            android:layout_marginStart="@dimen/_7pxh"
            android:layout_marginTop="@dimen/_40pxv"
            android:layout_width="@dimen/_120pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_profilepicture_1"
            app:layout_constraintEnd_toEndOf="@+id/txtDJK3sm3N"
            app:layout_constraintHorizontal_bias="0.33"
            app:layout_constraintStart_toStartOf="@+id/txtDJK3sm3N" app:layout_constraintTop_toBottomOf="@+id/imageExitbuttonin"/>
        <TextView android:ellipsize="end" android:gravity="center"
            android:id="@+id/txt2500Points"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_138pxh"
            android:layout_marginStart="@dimen/_137pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="0dp" android:singleLine="true"
            android:text="@{profileScreenVM.profileScreenModel.txt2500Points}"
            app:layout_constraintBottom_toTopOf="@+id/txtPointStore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDJK3sm3N"
            style="@style/txtRobotoregular12" tools:text="@string/lbl_2500_points"/>
        <TextView android:ellipsize="end" android:gravity="end"
            android:id="@+id/txtDJK3sm3N"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_114pxh"
            android:layout_marginStart="@dimen/_113pxh"
            android:layout_width="0dp" android:singleLine="true"
            android:text="@{profileScreenVM.profileScreenModel.txtDJK3sm3N}"
            app:layout_constraintBottom_toTopOf="@+id/txt2500Points"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageProfilePicture"
            style="@style/txtRobotoregular24" tools:text="@string/lbl_dj_k3sm3n"/>
        <TextView android:clickable="true" android:ellipsize="end"
            android:gravity="end" android:id="@+id/txtPointStore"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_121pxh"
            android:layout_marginStart="@dimen/_121pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="0dp" android:singleLine="true"
            android:text="@{profileScreenVM.profileScreenModel.txtPointStore}"
            app:layout_constraintBottom_toTopOf="@+id/txtLogout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt2500Points"
            style="@style/txtRobotoregular24" tools:text="@string/lbl_point_store"/>
        <TextView android:clickable="true" android:ellipsize="end"
            android:gravity="end" android:id="@+id/txtLogout"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_442pxv"
            android:layout_marginEnd="@dimen/_143pxh"
            android:layout_marginStart="@dimen/_142pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="0dp" android:singleLine="true"
            android:text="@{profileScreenVM.profileScreenModel.txtLogout}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPointStore"
            style="@style/txtRobotoregular24" tools:text="@string/lbl_logout"/>
        <ImageView android:clickable="true"
            android:id="@+id/imageExitbuttonin"
            android:layout_height="@dimen/_36pxh"
            android:layout_marginEnd="@dimen/_322pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="@dimen/_38pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_exitbuttonin"
            app:layout_constraintBottom_toTopOf="@+id/imageProfilePicture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
