<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="drawerItemLeftSideMenuModel" type="com.application.app.modules.itemleftsidemenu.data.model.DrawerItemLeftSideMenuModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintGroup103"
        android:layout_height="match_parent" android:layout_width="match_parent">
        <View android:background="@color/white_A700_b2"
            android:id="@+id/viewMainframecomi"
            android:layout_height="@dimen/_800pxv"
            android:layout_width="@dimen/_300pxh"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
        <ImageView android:clickable="true"
            android:id="@+id/imageExitbuttonin"
            android:layout_height="@dimen/_36pxh"
            android:layout_marginBottom="@dimen/_27pxv"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="@dimen/_43pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_exitbuttonin"
            app:layout_constraintBottom_toBottomOf="@+id/txtBlogs"
            app:layout_constraintEnd_toEndOf="@+id/txtBlogs"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/viewMainframecomi"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintRectangle16"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_40pxv"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_74pxv"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/viewMainframecomi"
            app:layout_constraintEnd_toEndOf="@+id/viewMainframecomi"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="@+id/viewMainframecomi"
            app:layout_constraintTop_toBottomOf="@+id/txtFeedback" style="@style/groupStylegray_400_99">
            <TextView android:id="@+id/txtAboutUsBilken"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_46pxv"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="wrap_content"
                android:text="@{drawerItemLeftSideMenuModel.txtAboutUsBilken}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/txtRobotoregular24" tools:text="@string/msg_about_us_bilken"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView android:clickable="true" android:ellipsize="end"
            android:gravity="start" android:id="@+id/txtFeedback"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_74pxv"
            android:layout_width="0dp"
            android:paddingBottom="@dimen/_2pxv"
            android:paddingStart="@dimen/_11pxh"
            android:paddingTop="@dimen/_1pxv" android:singleLine="true"
            android:text="@{drawerItemLeftSideMenuModel.txtFeedback}"
            app:layout_constraintEnd_toEndOf="@+id/viewMainframecomi"
            app:layout_constraintStart_toStartOf="@+id/viewMainframecomi"
            app:layout_constraintTop_toBottomOf="@+id/txtPodcasts"
            style="@style/txtSolid" tools:text="@string/lbl_feedback"/>
        <TextView android:clickable="true" android:ellipsize="end"
            android:gravity="start" android:id="@+id/txtBlogs"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="0dp"
            android:paddingBottom="@dimen/_7pxv"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_7pxv" android:singleLine="true"
            android:text="@{drawerItemLeftSideMenuModel.txtBlogs}"
            app:layout_constraintEnd_toEndOf="@+id/viewMainframecomi"
            app:layout_constraintStart_toStartOf="@+id/viewMainframecomi"
            app:layout_constraintTop_toTopOf="@+id/imageExitbuttonin"
            style="@style/txtSolid" tools:text="@string/lbl_blogs"/>
        <TextView android:clickable="true" android:ellipsize="end"
            android:gravity="start" android:id="@+id/txtPodcasts"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="0dp"
            android:paddingBottom="@dimen/_7pxv"
            android:paddingStart="@dimen/_11pxh"
            android:paddingTop="@dimen/_7pxv" android:singleLine="true"
            android:text="@{drawerItemLeftSideMenuModel.txtPodcasts}"
            app:layout_constraintEnd_toEndOf="@+id/viewMainframecomi"
            app:layout_constraintStart_toStartOf="@+id/viewMainframecomi"
            app:layout_constraintTop_toBottomOf="@+id/txtBlogs"
            style="@style/txtSolid" tools:text="@string/lbl_podcasts"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
